infra/kubernetes/tf/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${name}
  namespace: ${namespace}
spec:
  type: NodePort
  selector:
    app: ${name}
  ports:
    - port: ${port}
      targetPort: 80
      nodePort: ${node_port}
